# pwa

./: .gitignore  README.md  build_all.sh  www
ios/: BUILD  MODULE.bazel  WORKSPACE  run.sh
ios/Sources/: ContentView.swift  pwaApp.swift
ios/pwa/: ContentView.swift
ios/pwa.xcodeproj/: project.pbxproj
ios/www/: bundle.js  index.html  index.js
test/: docker-compose.yml  docker.sh
test/my-app/: package.json
web/: build.sh  docker-compose.yml
www/: .bazelignore  .npmrc  BUILD  MODULE.bazel  WORKSPACE  index.html  package-lock.json  package.json  pnpm-lock.yaml  run.sh  tsconfig.json  webpack.config.js
www-hello-world/: index.js
www/export/: BUILD
www/src/: App.tsx  index.html
www/src/components/: App.tsx  HelloWorld.tsx
