module(name = "ios", version = "0.0.1")

bazel_dep(name = "rules_apple", version = "3.13.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "2.2.3", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "www", version = "0.0.1", dev_dependency = True)
archive_override(
    module_name = "www",
    urls = ["file:///Users/clintonpage/Desktop/mygit/pwa/ios/archive/tar_html.tar.gz"],
)